src/pages/fr/v1.11.0/api/users.mdx
---
titre: "Utilisateurs"
metaTitle: "Utilisateurs"
metaDescription: "Comment gérer et contrôler les données des utilisateurs."
---

## Obtenir des statistiques d'utilisateur

Obtenez des statistiques et des détails de haut niveau sur un utilisateur particulier, qui a été identifié via la fonction JavaScript `tracker.setUserID`. Cette extrémité renvoie des choses comme `firstSeen`, `lastSeen` et `numberSessions`.

### Méthode
`GET`

### URL
`/api/v1/:projectKey/users/:userId`

### Paramètres

| Nom | Type | Description |
|----------|-------------|-------------|
| projectKey | chaîne | L'ID du projet que vous suivez (requis) |
| userId | chaîne | L'ID de votre utilisateur, défini via `tracker.setUserID` (requis) |

### En-têtes de demande

`Authorization: {YOUR_ORGANIZATION_API_KEY}`: La clé peut être trouvée dans 'Préférences' > 'Compte' > 'Clé API de l'organisation'.

### Codes de statut

`200`: Réponse envoyée sous forme de JSON dans le corps

### Exemple de demande


```shell
curl -X GET \
  https://openreplay.example.com/api/v1/3sWXSsqHgSKnE87YkNJK/users/mickael@openreplay.com \
  -H 'content-type: application/json' \
  -H 'Authorization: {YOUR_ORGANIZATION_API_KEY}'
```


### Exemple de réponse


```json
{
  "data": {
    "userId": "mickael@openreplay.com",
    "sessionCount": 3,
    "lastSeen": 1623689478617,
    "firstSeen": 1623440822825
  }
}
```


## Supprimer un utilisateur

Supprimez un utilisateur (identifié via la fonction JavaScript `tracker.setUserID`) et toutes ses données capturées par OpenReplay. Cela déclenche un travail en arrière-plan (cron) pour supprimer toutes les données relatives à l'utilisateur, y compris les sessions, les événements, les métadonnées, les événements personnalisés et les enregistrements. L'appel renvoie un `jobID` que vous pouvez utiliser plus tard pour [vérifier](/api/jobs#getjobdetails) le statut de l'opération de suppression.

Cela est utile pour gérer les demandes RGPD que vous pouvez recevoir de vos utilisateurs finaux.

### Méthode
`DELETE`

### URL
`/api/v1/:projectKey/users/:userId`

### Paramètres

| Nom | Type | Description |
|----------|-------------|-------------|
| projectKey | chaîne | L'ID du projet que vous suivez (requis) |
| userId | chaîne | L'ID de votre utilisateur, défini via `tracker.setUserID` (requis) |

### En-têtes de demande

`Authorization: {YOUR_ORGANIZATION_API_KEY}`: La clé peut être trouvée dans 'Préférences' > 'Compte' > 'Clé API de l'organisation'.

### Codes de statut

`200`: Réponse envoyée sous forme de JSON dans le corps

### Exemple de demande


```shell
curl -X DELETE \
  https://openreplay.example.com/api/v1/3sWXSsqHgSKnE87YkNJK/users/mickael@example.com \
  -H 'content-type: application/json' \
  -H 'Authorization: {YOUR_ORGANIZATION_API_KEY}'
```


### Exemple de réponse


```json
{
  "data": {
    "jobId": 22345,
    "description": "Delete user sessions of userId = mickael@example.com",
    "status": "scheduled",
    "projectId": 1,
    "action": "delete_user_data",
    "referenceId": "mehdi@openreplay.com",
    "createdAt": 1623912962910,
    "updatedAt": 1623912962910,
    "startAt": 1623954600000,
    "errors": null
  }
}
```

